# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/: labeler.yml
.github/workflows/: CI.yml  general.yml
configuration/: local.yml  production.yml  prometheus.yml
migrations/: 20210403141054_make_status_not_null_in_subscriptions.sql
scripts/: build.sh  init_db.sh  init_jaeger.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
